--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@types/express": "^5.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.3.1"
   }
 }
