--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@vonage/messages": "^1.23.0",
+    "@vonage/server-sdk": "^3.26.0",
     "dotenv": "^17.3.1"
   }
 }
