--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
+  "name": "whatsapp-chatbot",
+  "version": "1.0.0",
+  "description": "CodeTribe Academy Learner Support WhatsApp Bot",
+  "main": "dist/server.js",
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
+  "keywords": ["whatsapp", "chatbot", "codetribe"],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2",
+    "ollama": "^0.5.0",
+    "@vonage/messages": "^1.23.0",
+    "@vonage/server-sdk": "^3.26.0"
+  },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/node": "^20.10.5",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2"
-  },
-  "dependencies": {
-    "@vonage/messages": "^1.23.0",
-    "@vonage/server-sdk": "^3.26.0",
-    "dotenv": "^17.3.1"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
