--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@vonage/auth": "^1.14.0",
+    "@vonage/server-sdk": "^3.26.0",
+    "axios": "^1.13.5",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "ollama": "^0.6.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.6",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.11",
