--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-  "module": "CommonJS",
-  "target": "ES2022",
-  "rootDir": "./src",
-  "outDir": "./dist",
-  "strict": true,
-  "esModuleInterop": true,
-  "resolveJsonModule": true
-}
-
+    "module": "CommonJS",
+    "target": "ES2022",
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node"
+  }
 }
