chore: update configuration files and environment variables
- Add comprehensive .env.example with all configuration options
- Update tsconfig.json with proper module resolution
- Add new environment variables for caching, rate limiting, timeouts
- Update package.json scripts for testing
- Add OLLAMA_REQUEST_TIMEOUT_MS and OLLAMA_MAX_TOKENS defaults
- Update .gitignore to exclude logs and private keys

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,13 @@ dist/
 .env.local
 .env.example
 
+# private key
+private.key
+
+
 # Logs
 *.log
+logs/
 
 # OS files
 .DS_Store
@@ -25,8 +30,8 @@ Thumbs.db
 *.swo
 EOF
 ```
-#private key
-
+# Private keys
 private.key
+private.key.txt
 *.key
 *.pem
