--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,15 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "CommonJS",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-<<<<<<< Updated upstream
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "outDir": "./dist",
     "rootDir": "./src"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
-}
-=======
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
   "exclude": [
@@ -31,4 +23,3 @@
     "*.test.ts"
   ]
 }
->>>>>>> Stashed changes
