--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-  "module": "CommonJS",
-  "target": "ES2022",
-  "rootDir": "./src",
-  "outDir": "./dist",
-  "strict": true,
-  "esModuleInterop": true,
-  "resolveJsonModule": true
-}
-
+    "module": "CommonJS",
+    "target": "ES2022",
+    "rootDir": ".",
+    "outDir": "./dist",
+    "strict": true,
+    "types": ["jest", "node"],
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "tests"]
 }
