--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,5 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2022",
-    "rootDir": ".",
-    "outDir": "./dist",
-    "strict": true,
-    "types": ["jest", "node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "tests"]
-}
     "target": "ES2022",
     "module": "CommonJS",
     "moduleResolution": "node",
@@ -24,7 +12,9 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "dist",
@@ -32,7 +22,7 @@
     "**/*.test.ts",
     "**/*.spec.ts",
     "test-*.ts",
-    "*.test.ts"
+    "*.test.ts",
+    "src/app.ts"
   ]
 }
-
